# fly

./: .envrc  .gitignore  package.json
spi/: .envrc  README.mdt  build.sh  dist.sh  fly.toml  gen.coffee
spi-rs/: .envrc  Cargo.toml  Dockerfile  docker.build.sh  env.sh  fly.dist.sh  fly.secret.env.set.sh
spi-rs/src/: main.rs  pack.rs  pg.rs  rt.rs
spi-rs/src/url/: sampler.rs  sampler_id.rs
spi.old/: Dockerfile  README.md  docker.run.sh  esbuild.coffee  fly.secret.env.set.sh  package.json  test.sh
spi/src/: index.coffee
spi/src/url/: sampler.coffee
spi/test/: main.coffee
