[package]
name = "spi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
awp = "0.1.2"
tracing = "0.1.37"
axum = "0.6.18"
tower = { version = "0.4.13", features = ["timeout"] }
const-str = "0.5.5"
tokio-postgres = "0.7.8"
async-lazy = { version = "0.1.0", features = ["parking_lot", "nightly"] }
futures-util = "0.3.28"
tower-http = { version = "0.4.0", features = ["cors", "tokio"] }
msgpacker = "0.4.3"
paste = "1.0.12"
anypack = { version = "0.1.5" }
async-once-cell = "0.5.2"

[dependencies.tokio]
version = "1.28.2"
features = ["macros", "rt-multi-thread"]

[profile.release]
lto = true
opt-level = 3
incremental = true
codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
strip = true
